Fix a problem that the sidebar wasnt scrollable on mobiel devices with too much tags

--- a/src/app/components/sidebar/sidebar.less
+++ b/src/app/components/sidebar/sidebar.less
@@ -8,6 +8,7 @@ sidebar {
 
 .SidebarMenu-container {
   flex: 1;
+  overflow-x: scroll;
 }
 
 .SidebarProject-container {
